@@ -83,14 +83,13 @@
 
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html dir="<?php echo $dir; ?>">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $clang; ?>" lang="<?php echo $clang; ?>" dir="<?php echo $dir; ?>">
 <head>
 <link rel="stylesheet" href="<?php echo $style; ?>" type="text/css" />
 <link rel="shortcut icon" href="images/favicon.ico" />
 <meta name="author" content="Simon E Booth" />
 <meta name="publisher" content="Giric" />
 <meta http-equiv="Content-Type" content="text/html; charset=<?php echo $charset; ?>" />
-<meta http-equiv="content-language" content="<?php echo $clang; ?>" />
 <meta name="copyright" content="2002-2003 Simon E Booth" />
 <meta name="description" content="<?php echo $desc; ?>" />
 <meta name="page-topic" content="Genealogy" />
